@@ -1,3 +1,10 @@
+2005-01-07  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit-commands.c (gedit_cmd_help_about): replace "translator_credits" with
+	"translator-credits" (as requested in bug #150106:Modules should use 
+	"translator-credits" intead of "translator_credits"). Added comment for 
+	translators.
+
 2004-12-13  Paolo Maggi  <paolo@gnome.org>
 
 	* dialogs/gedit-preferences.glade2: s/Tabs/Tab Stops and 
